imporve_framerate